--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>This policy applies to all information collected or submitted on the V2 Viewer website (the "Website") and the V2 Viewer application (the "App").
 
-    We aim to collect and store no user data or information, with the exception of information contained in crash reports received from Apple as well as information outlined in the Email Co and Information Usage sections below. No data or information will be shared or provided to third parties.</p>
+    We aim to collect and store no user data or information, with the exception of information contained in crash reports received from Apple as well as information outlined in the Email Contact and Information Usage sections below. No data or information will be shared or provided to third parties.</p>
     <p>Apple's Privacy Policy can be found <a href='https://www.apple.com/legal/privacy/en-ww/'>here</a>.</p>
 
     <p>By using the App, you agree to the following terms and privacy agreement.</p>
@@ -37,7 +37,7 @@
     <h3>Changes to This Policy</h3>
     <p>Changes to this policy will be updated on this site.</p>
 
-    <p>These terms and conditions are effective as of 2021-01-23</p>
+    <p>These terms and conditions are effective as of 2021-04-28</p>
 
     </div>
 
